http01/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: "nginx"
  name: httpserver
  namespace: default
spec:
  rules:
    - host: cncamp.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpserver
                port:
                  number: 80
  tls:
    - hosts:
        - www.example.com
      secretName: example-tls
